sumo/tests/sumo/errors/wauts/cross3ltl_error_missing_wautid/errors.sumo
Error: Missing id for a WAUT (attribute 'id').
Quitting (on error).
